@@ -1,5 +1,3 @@
-#include <type_traits>
-
 // ---------------------  //
 //  Matrix Product Class  //
 // ---------------------  //
