@@ -1,18 +1,14 @@
 /**
- * @file traits.h
+ * @file invlib.h
  * @author Simon Pfreundschuh
- * @date 2017-06-07
- * @brief Invlib super class used to distinguish invlib code from  external code.
+ * @date 2017-06-22
+ * @brief Invlib dummy class to distinguis external code.
+ *
  */
 
 #ifndef INVLIB_H
 #define INVLIB_H
 
-namespace invlib
-{
-    
 class Invlib {};
 
-}     // namespace::invlib
-
-#endif // TRAITS_H
+#endif // INVLIB_H
